# game4s

./: README.md  game-audio.js  game-data.js  game.js  index.html  menu.html  menu.js  package-lock.json  package.json  styles.css
api/_lib/: rooms.js
api/room/: create.js  join.js  state.js  update.js
game/: bootstrap.js  camera-viewport.js  constants.js  input-controller.js  multiplayer-controller.js  physics-controller.js  quiz-controller.js
game/render/: background.js  hud.js  player-animation.js
menu/: categories.js  menu-audio.js  menu-controller.js
python_port/: Dockerfile.api  README.md  docker-compose.api.yml  pyproject.toml
python_port/game4s_py/client/: audio_engine.py  game_app.py  main.py  menu_app.py  models.py  network.py  text_engine.py
python_port/game4s_py/server/: main.py  models.py  service.py  storage.py
python_port/game4s_py/shared/: game_data.py
python_port/game4s_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
