[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game4s-python"
version = "0.1.0"
description = "Python rewrite of game4s with pygame local hot-seat gameplay"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame-ce>=2.5.7",
  "httpx>=0.27.0"
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["game4s_py*"]
